<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F4F4"
    tools:context=".loginAndSignup.login">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:foregroundGravity="center"
        android:src="@drawable/logoo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/baloo_chettan"
        android:gravity="center"
        android:text="@string/proj_name"
        android:textColor="#F48107"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/finger_paint"
        android:gravity="center"
        android:text="@string/App_Thego"
        android:textColor="@color/TextColor"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/finger_paint"
        android:text="Login To Your Account"
        android:textColor="@color/TextColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:padding="5dp"
        android:id="@+id/email_or_num_loginPage"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/edit_text_cstm_shape"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="5dp"
        android:elevation="5dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="50dp" />

    <EditText
        android:id="@+id/password_ET_login"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_cstm_shape"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="5dp"
        android:elevation="5dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/email_or_num_loginPage"
        app:layout_constraintStart_toStartOf="@+id/email_or_num_loginPage"
        app:layout_constraintTop_toBottomOf="@+id/email_or_num_loginPage" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="452dp"
        android:fontFamily="@font/handlee"
        android:text="Or"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/handlee"
        android:text="Continue With"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/continue_with_fb_login_btn"
        android:layout_width="166dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/fb"
        android:text="Facebook"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/continue_with_google_loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/continue_with_google_loginBtn"
        android:layout_width="166dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:text="Google"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/continue_with_fb_login_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/login_btn_loginPage"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@color/TextColor"
        android:gravity="center"
        android:text="Login"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/TV_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/handlee"
        android:gravity="center"
        android:text="Don't Have Account?"
        android:textColor="#2962FF"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_loginPage" />


</androidx.constraintlayout.widget.ConstraintLayout>